--- a/src/assets/scss/layout/_bg.scss
+++ b/src/assets/scss/layout/_bg.scss
@@ -35,7 +35,7 @@
     background-image: linear-gradient(to top,
       #{_palette(bg-overlay)},
       #{_palette(bg-overlay)}),
-    url('../../../public/static/images/overlay.png');
+    url('../../images/overlay.png');
     background-size: auto, 256px 256px;
     background-position: center, center;
     background-repeat: no-repeat, repeat;
@@ -48,7 +48,7 @@
       ('transform #{_duration(article)} ease-in-out',
         'filter #{_duration(article)} ease-in-out'
       ));
-    background-image: url('../../../public/static/images/overlay.png');
+    background-image: url('../../images/bg.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
